<resources>
    <string name="app_name">IntermediateSub</string>
    <string name="login">Masuk</string>
    <string name="gambardicoding">GambarDicoding</string>
    <string name="register">Daftar</string>
    <string name="message_welcome_page">Anda bisa membagikan foto anda kepada orang lain dan melihat foto yang dibagikan orang lain.</string>
    <string name="title_welcome_page">Selamat datang di Dicoding Storyapp !</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="gallery">Gallery</string>
    <string name="image_fo_story">Image from Story</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="longtitude">Long: %s</string>
    <string name="latitude">Lat: %s</string>
    <string name="retry">Coba lagi</string>
    <string name="camera">Camera</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="upload">Upload</string>
    <string name="latitude_full">Latitude</string>
    <string name="longitude_full">Longitude</string>
    <string name="send_current_location">Send Current Location</string>
    <string name="disini_waktu">Disini Waktu</string>
    <string name="disini_lat">Disini Lat</string>
    <string name="disini_long">Disini Long</string>
    <string name="disini_deskripsi">Disini deskripsi</string>
    <string name="add_new_story">Add New Story</string>

</resources>